<resources>
    <string name="app_name">Car Manager</string>

    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_sort">Sort</string>
    <string name="action_delete">Delete</string>
    <string name="action_view">View</string>

    <string name="edit_save">Save</string>
    <string name="edit_saved">Car saved</string>
    <string name="edit_name">Car name</string>
    <string name="edit_power">Power</string>
    <string name="edit_max_speed">Max speed</string>
    <string name="edit_type">Type</string>
    <string name="edit_emission">Emission CO2</string>
    <string name="edit_year">Production year</string>
    <string name="edit_mass">Mass</string>

    <string-array name="type_array">
        <item>Station Wagon</item>
        <item>Hatchback</item>
        <item>Coupe</item>
        <item>Convertible</item>
    </string-array>


    <string name="title_car">Car Title</string>
    <string name="model_car">Model : </string>
    <string name="engine_car">Engine : </string>
    <string name="descr_car">Description : </string>
    <string name="model_car_text">Model Text</string>
    <string name="engine_car_text">Engine Text</string>
    <string name="descr_car_text">Description Text</string>
    <string name="search">Search</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="type">Type</string>
    <string name="sorted_year">Sorted by year</string>
    <string name="sorted_name">Sorted by name</string>
    <string name="sorted_type">Sorted by type</string>
    <string name="deleted">Element deleted</string>

    <string name="dialog_delete">Delete selected entry?</string>
    <string name="dialog_sort">Sort by</string>
</resources>